--- a/PL/Views/Rol/GetAll.cshtml
+++ b/PL/Views/Rol/GetAll.cshtml
@@ -5,6 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="~/js/Roles/RoleCRUD.js"></script>
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -14,7 +17,7 @@
     <hr />
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-success" id="btnAdd">+</button>
+            <button type="button" class="btn btn-success" id="btnAdd" onclick="BtnAdd()">+</button>
         </div>
     </div>
     <br />
@@ -90,7 +93,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
+                        <button type="button" class="btn btn-success" id="btnGuardar" onclick="BtnGuardar()">Guardar</button>
                     </div>
                 </div>
             </div>
@@ -118,7 +121,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-success" id="btnAsignar">Asignar</button>
+                        <button type="button" class="btn btn-success" id="btnAsignar" onclick="BtnAsignar()">Asignar</button>
                     </div>
                 </div>
             </div>
@@ -131,7 +134,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalAsignadoLabel">Modal title</h5>
+                    <h5 class="modal-title" id="modalAsignadoLabel">Exito</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -141,167 +144,18 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-@section scripts {
+@* @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script type="text/javascript">
-        $(document).ready(function () {
-            GetAll();
-            Usuarios();
-        });
-
-        function GetAll() {
-            $.ajax({
-                type: 'GET',
-                url: '@Url.Action("GetAllRoles")',
-                success: function (result) {
-                    $('#tBodyRol').empty();
-
-                    $.each(result, function (i, rol) {
-                        var fila =
-                            '<tr>'
-                            + '<td style="text-align: center; vertical-align: middle;"><button type="button" class="btn btn-info" id="btnAsignar" onclick="Asignar(this)" value="' + rol.id + '">Asignar</button></td>'
-                            // + '<td style="display: none;"></td>'
-                            + '<td style="text-align: center;">' + rol.name + '</td>'
-                            + '<td style="text-align: center; vertical-align: middle;"><button type="button" class="btn btn-warning" id="btnUpdate" onclick="Actualizar(this)"  value="' + rol.id + '">Editar</button></td>'
-                            // + '<td style="display: none;"></td>'
-                            + '<td style="text-align: center; vertical-align: middle;"><button type="button" class="btn btn-danger" onclick="Delete(this)"  value="' + rol.id + '">Eliminar</button></td>'
-                            + '</tr>';
-                        $('#tBodyRol').append(fila);
-                    });
-                },
-                error: function (result) {
-                    alert('Error en la consulta.');
-                }
-            });
-        };
-
-        function Usuarios() {
-            $.ajax({
-                type: 'GET',
-                url: '@Url.Action("GetAllUsuarios")',
-                success: function (result) {
-                    $('#ddlAsignar').append('<option value="' + 0 + '">' + 'Seleccione una opción' + '</option>');
-                    $.each(result.objects, function (i, user) {
-                        var select =
-                            '<option id="idUsuario" value="' + user.idUsuario + '">' + user.userName + '</option>';
-                        $("#ddlAsignar").append(select);
-                    });
-                },
-                error: function (result) {
-                    alert('Error en la consulta.');
-                }
-            });
-        };
-
-        $('#btnAdd').click(function () {
-            $("#txtIdRol").val("");
-            $("#txtNombre").val("");
-            $('#modalAgregar').modal('show');
-        });
-
-        $('#btnGuardar').click(function () {
-            $.ajax({
-                type: 'POST',
-                url: '@Url.Action("Form")',
-                data: $('#formAgregar').serialize(),
-                dataType: 'json',
-                success: function (result) {
-                    $('#modalAgregar').modal('hide');
-
-                    $('#tBodyRol').empty();
-
-                    GetAll();
-                },
-                error: function (result) {
-                    alert('Error en la consulta.');
-                }
-            });
-        });
-
-        function Actualizar(idRol) {
-            $.ajax({
-                url: '@Url.Action("GetByIdRol")',
-                data: { IdRole: idRol.value },
-                type: 'GET',
-                dataType: 'json',
-                success: function (data) {
-                    $('#txtIdRol').val(data.object.roleId);
-                    $('#txtNombre').val(data.object.name);
-                    $('#modalAgregar').modal('show');
-
-                },
-                error: function () {
-                    alert('Disculpe, existió un problema');
-                }
-            });
-        };
-
-        function Delete(idRol) {
-            var checkconfirm = confirm('¿Estas seguro de eliminarlo?');
-            if (checkconfirm == true) {
-                $.ajax({
-                    url: '@Url.Action("Delete")',
-                    data: { IdRole: idRol.value },
-                    type: 'POST',
-                    dataType: 'json',
-                    success: function () {
-                        $('#tBodyRol').empty();
-                        GetAll();
-                    },
-                    error: function () {
-                        alert('Disculpe, existió un problema');
-                    }
-                });
-            } else {
-                return false;
-            }
-
-        };
-
-
-
-        function Asignar(idRol) {
-            $.ajax({
-                url: '@Url.Action("Asignar")',
-                data: { IdRole: idRol.value },
-                type: 'GET',
-                dataType: 'json',
-                success: function (result) {
-                    $('#txtIdRole').val(result.rol.roleId);
-                    $('#ddlAsignar').val('0');
-                    $('#modalAsignar').modal('show');
-                },
-                error: function () {
-                    alert('Disculpe, existió un problema');
-                }
-            });
-        };
-
-        $('#btnAsignar').click(function () {
-            $.ajax({
-                type: 'POST',
-                url: '@Url.Action("Asignar")',
-                data: $('#formAsignar').serialize(),
-                dataType: 'json',
-                success: function (result) {
-                    $('#modalAsignar').modal('hide');
-
-                    $('#modalAsignado').modal('show');
-                },
-                error: function (result) {
-                    alert('Error en la consulta.');
-                }
-            });
-        });
+        
     </script>
 
-}
+} *@
 
