--- a/PL/Views/Autor/GetAll.cshtml
+++ b/PL/Views/Autor/GetAll.cshtml
@@ -1,10 +1,11 @@
-﻿@model ML.Autor
-@{
+﻿@{
     ViewData["Title"] = "GetAll";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@* <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="~/js/Autor/AutorCRUD.js"></script> *@
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="~/js/Autor/AutorCRUD.js"></script>
+
+<br />
 
 <div class="container">
     <div class="row">
@@ -16,267 +17,130 @@
 
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-success" id="btnAdd">+</button>
+            <button type="button" class="btn btn-success" id="btnAdd" onclick="BtnAdd()">+</button>
         </div>
     </div>
     <br />
-
-    @if (Model.Autores != null)
-    {
-        <div class="row">
-            <div class="col-md-12 table-responsive">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="text-center" hidden>IdAutor</th>
-                            <th class="text-center">Nombre Completo</th>
-                            <th class="text-center">Foto</th>
-                            <th class="text-center">Tipo de Autor</th>
-                            <th class="text-center">Editar</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tBodyAutor">
-                    </tbody>
-                </table>
-            </div>
+    <div class="row">
+        <div class="col-md-12 table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th class="text-center" hidden>IdAutor</th>
+                        <th class="text-center">Nombre Completo</th>
+                        <th class="text-center">Foto</th>
+                        <th class="text-center">Tipo de Autor</th>
+                        <th class="text-center">Editar</th>
+                    </tr>
+                </thead>
+                <tbody id="tBodyAutor">
+                </tbody>
+            </table>
         </div>
-    }
-    else
-    {
-        <div class="alert alert-danger" role="alert">
-            @ViewBag.Error
-        </div>
-    }
+    </div>
+    <br />
+    <br />
 </div>
 
 <div class="container">
-    @using (Html.BeginForm("Form", "Autor", FormMethod.Post, new { enctype = "multipart/form-data", @id = "myForm" }))
-    {
-        <div class="modal fade" id="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalLabel">Autor</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
+
+    <div class="modal fade" id="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Autor</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <form id="myForm" enctype="multipart/form-data" method="post">
                         <div class="row">
                             <div class="col-md-12">
-                                @Html.LabelFor(model => model.IdAutor, null, new { @style = "display: none;" })
-                                @Html.TextBoxFor(model => model.IdAutor, new { @style = "display: none;", @id = "txtIdAutor" })
+                                @* @Html.TextBoxFor(model => model.IdAutor, new { @style = "display: none;", @id = "txtIdAutor" }) *@
+                                <input id="txtIdAutor" name="idAutor" style="display: none;" class="form-control" />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                @Html.LabelFor(model => model.Nombre)
-                                @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre" })
+                                @Html.Label("Nombre: ")
+                                @* @Html.LabelFor(model => model.Nombre)
+                                @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre" }) *@
+                                <input id="txtNombre" name="nombre" class="form-control" />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                @Html.LabelFor(model => model.ApellidoPaterno)
-                                @Html.TextBoxFor(model => model.ApellidoPaterno, new { @class = "form-control", @id = "txtApellidoPaterno" })
+                                @Html.Label("Apellido Paterno: ")
+                                @* @Html.LabelFor(model => model.ApellidoPaterno)
+                                @Html.TextBoxFor(model => model.ApellidoPaterno, new { @class = "form-control", @id = "txtApellidoPaterno" }) *@
+                                <input id="txtApellidoPaterno" name="apellidoPaterno" class="form-control" />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                @Html.LabelFor(model => model.ApellidoMaterno)
-                                @Html.TextBoxFor(model => model.ApellidoMaterno, new { @class = "form-control", @id = "txtApellidoMaterno" })
+                                @Html.Label("Apellido Materno: ")
+                                @* @Html.LabelFor(model => model.ApellidoMaterno)
+                                @Html.TextBoxFor(model => model.ApellidoMaterno, new { @class = "form-control", @id = "txtApellidoMaterno" }) *@
+                                <input id="txtApellidoMaterno" name="apellidoMaterno" class="form-control" />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 @Html.Label("Tipo de Autor: ")
-                                @if (Model.TipoAutor.TipoAutores == null)
+                                @* @if (Model.TipoAutor.TipoAutores == null)
                                 {
-                                    @Html.DropDownListFor(model => model.TipoAutor.IdTipoAutor, new SelectList(string.Empty, "Value", "Text"), "Seleccione una opción",
-                                             new { @class = "form-control", @id = "ddlTipoAutor" })
+                                @Html.DropDownListFor(model => model.TipoAutor.IdTipoAutor, new SelectList(string.Empty, "Value", "Text"), "Seleccione una opción",
+                                new { @class = "form-control", @id = "ddlTipoAutor" })
                                 }
                                 else
                                 {
-                                    @Html.DropDownListFor(model => model.TipoAutor.IdTipoAutor, new SelectList(Model.TipoAutor.TipoAutores, "IdTipoAutor", "Nombre"), "Seleccione una opción",
-                                             new { @class = "form-control", @id = "ddlTipoAutor" })
+                                @Html.DropDownListFor(model => model.TipoAutor.IdTipoAutor, new SelectList(Model.TipoAutor.TipoAutores, "IdTipoAutor", "Nombre"), "Seleccione una opción",
+                                new { @class = "form-control", @id = "ddlTipoAutor" })
+                                } *@
+                                <select id="ddlTipoAutor" name="idTipoAutor" class="form-control">
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                    <br />
+                    <div class="row">
+                        <div class="col-md-12">
+                            @Html.Label("Foto:")
+                            <input type="file" id="fuImagen" name="fuImagen" class="form-control" onchange="PreviewImage(event)" />
+                            <br />
+                            <div id="cargarFoto">
+                                @* @if (Model.Foto == null)
+                                {
+                                <img src="/Images/userDefault.jpg" id="imgAutor" width="150px" height="150px" />
                                 }
-                            </div>
-                        </div>
-                        <br />
-                        <div class="row">
-                            <div class="col-md-12">
-                                @Html.LabelFor(model => model.Foto)
-                                <input type="file" id="fuImagen" name="fuImagen" class="form-control" onchange="PreviewImage(event)" />
-                                <br />
-                                <div id="cargarFoto">
-                                    @if (Model.Foto == null)
-                                    {
-                                        <img src="/Images/userDefault.jpg" id="imgAutor" width="150px" height="150px" />
-                                    }
-                                    else
-                                    {
-                                        <img src="data:image/png;base64, @Convert.ToBase64String(Model.Foto)" id="imgAutor" width="150px" height="150px" />
-                                    }
-                                </div>
-                                @Html.HiddenFor(model => model.Foto)
+                                else
+                                {
+                                <img src="data:image/png;base64, @Convert.ToBase64String(Model.Foto)" id="imgAutor" width="150px" height="150px" />
+                                } 
+                                @Html.HiddenFor(model => model.Foto)*@
                             </div>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <input type="text" id="txtUpdateFoto" name="txtUpdateFoto" class="form-control"/>
+                        </div>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-success" id="btnGuardarAutor" onclick="BtnGuardarAutor()">Guardar</button>
                 </div>
             </div>
         </div>
-    }
+    </div>
 </div>
 
-@section scripts {
+@* @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script type="text/javascript">
-        $(document).ready(function () {
-            GetAll();
-        });
 
-        function PreviewImage(event) {
-            var output = document.getElementById('imgAutor');
-            output.src = URL.createObjectURL(event.target.files[0]);
-            output.onload = function () {
-                URL.revokeObjectURL(output.src) // free memory
-            }
-        };
-
-        function GetAll() {
-            $.ajax({
-                type: 'GET',
-                url: '@Url.Action("GetAutores")',
-                success: function (result) {
-                    $('#tBodyAutor').empty();
-
-                    $.each(result.objects, function (i, autor) {
-                        var imagen;
-                        if (autor.foto == null) {
-                            imagen = '<img src="/Images/userDefault.jpg" width = "50px" height = "50px"/>'
-                        }
-                        else {
-                            imagen = '<img src="data:image/png;base64,' + autor.foto + '" width = "50px" height = "50px"/>'
-                        }
-                        var fila =
-                            '<tr>'
-                            + '<td hidden>' + autor.idAutor + '</td>'
-                            + '<td class="text-center">' + autor.nombre + ' ' + autor.apellidoPaterno + ' ' + autor.apellidoMaterno + '</td>'
-                            + '<td class="text-center">'
-                            + imagen
-                            + '</td>'
-                            + '<td class="text-center">' + autor.tipoAutor.nombre + '</td>'
-                            + '<td class="text-center"><button type="button" class="btn btn-warning" id="btnUpdate" onclick="Modal(this)"  value="' + autor.idAutor + '">Editar</button></td>'
-                            + '</tr>';
-                        $('#tBodyAutor').append(fila);
-                    });
-                }
-            });
-        };
-
-        $('#btnAdd').click(function () {
-            $("#txtIdAutor").val("");
-            $("#txtNombre").val("");
-            $("#txtApellidoPaterno").val("");
-            $('#txtApellidoMaterno').val("");
-            $('#ddlTipoAutor').val("");
-            $('#fuImagen').val("");
-            $('#imgAutor').attr('src', '/Images/userDefault.jpg');
-            $('#modal').modal('show');
-        });
-
-        function Modal(boton) {
-
-            $.ajax({
-                url: '@Url.Action("GetById")',
-
-                data: { idAutor: boton.value },
-
-                type: 'GET',
-
-                dataType: 'json',
-
-                success: function (data) {
-
-                    $('#txtIdAutor').val(data.object.idAutor)
-                    $('#txtNombre').val(data.object.nombre)
-                    $('#txtApellidoPaterno').val(data.object.apellidoPaterno)
-                    $('#txtApellidoMaterno').val(data.object.apellidoMaterno)
-                    $('#ddlTipoAutor').val(data.object.tipoAutor.idTipoAutor)
-
-                    $('#cargarFoto').empty();
-
-                    var imagen;
-
-
-                    if (data.object.foto == null) {
-                        imagen = '<img src="/Images/userDefault.jpg" id="imgAutor" width = "150px" height = "150px"/>'
-                    }
-                    else {
-                        imagen = '<img src="data:image/png;base64,' + data.object.foto + '" id="imgAutor" width = "150px" height = "150px"/>'
-                    }
-
-                    $('#cargarFoto').append(imagen);
-
-                    $('#modal').modal('show');
-                },
-                error: function () {
-                    alert('Disculpe, existió un problema');
-                },
-            });
-        };
-
-        $('#btnGuardar').click(function () {
-
-            var formData = new FormData(document.getElementById('myForm'));
-
-            $.ajax({
-                type: 'POST',
-                url: '@Url.Action("Form")',
-                data: formData,
-                processData: false,
-                contentType: false,
-                success: function () {
-                    $('#modal').modal('hide');
-
-                    $('#tBodyAutor').empty();
-
-                    $.ajax({
-                        type: 'GET',
-                        url: '@Url.Action("GetAutores")',
-                        success: function (result) {
-                            $.each(result.objects, function (i, autor) {
-                                var imagen;
-                                if (autor.foto == null) {
-                                    imagen = '<img src="/Images/userDefault.jpg" width = "50px" height = "50px"/>'
-                                }
-                                else {
-                                    imagen = '<img src="data:image/png;base64,' + autor.foto + '" width = "50px" height = "50px"/>'
-                                }
-                                var fila =
-                                    '<tr>'
-                                    + '<td hidden>' + autor.idAutor + '</td>'
-                                    + '<td class="text-center">' + autor.nombre + ' ' + autor.apellidoPaterno + ' ' + autor.apellidoMaterno + '</td>'
-                                    + '<td class="text-center">'
-                                    + imagen
-                                    + '</td>'
-                                    + '<td class="text-center">' + autor.tipoAutor.nombre + '</td>'
-                                    + '<td class="text-center"><button type="button" class="btn btn-warning" id="btnUpdate" onclick="Modal(this)"  value="' + autor.idAutor + '">Editar</button></td>'
-                                    + '</tr>';
-                                $('#tBodyAutor').append(fila);
-                            });
-                        },
-                        error: function (result) {
-                            alert('Error en la consulta.');
-                        }
-
-                    });
-
-                }
-            });
-        });
 
     </script>
-}
+} *@
