--- a/PL/Views/Editorial/GetAll.cshtml
+++ b/PL/Views/Editorial/GetAll.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "GetAll";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="~/js/Editorial/EditorialCRUD.js"></script>
+
+<br />
 
 <div class="container">
     <div class="row">
@@ -14,37 +18,29 @@
 
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-success" id="btnAdd">+</button>
+            <button type="button" class="btn btn-success" id="btnAdd" onclick="btnAdd()">+</button>
         </div>
     </div>
     <br />
-
-    @if (Model.Editoriales.Count != 0)
-    {
-        <div class="row">
-            <div class="col-md-12 table-responsive">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="text-center">Editar</th>
-                            <th class="text-center" hidden>IdEditorial</th>
-                            <th class="text-center">Nombre Editorial</th>
-                            <th class="text-center">Dirección</th>
-                            <th class="text-center">Eliminar</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tBodyEditorial">
-                    </tbody>
-                </table>
-            </div>
+    <div class="row">
+        <div class="col-md-12 table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th class="text-center">Editar</th>
+                        <th class="text-center" hidden>IdEditorial</th>
+                        <th class="text-center">Nombre Editorial</th>
+                        <th class="text-center">Dirección</th>
+                        <th class="text-center">Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody id="tBodyEditorial">
+                </tbody>
+            </table>
         </div>
-    }
-    else
-    {
-        <div class="alert alert-danger" role="alert">
-            @ViewBag.Message
-        </div>
-    }
+    </div>
+    <br />
+    <br />
 </div>
 
 <div class="container">
@@ -170,14 +166,14 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
+                        <button type="button" class="btn btn-success" id="btnGuardar" onclick="BtnGuardar()">Guardar</button>
                     </div>
                 </div>
             </div>
         </div>
     }
 </div>
-
+@*
 @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
@@ -535,4 +531,4 @@
 
 
     </script>
-}
+} *@
