--- a/PL/Views/Home/Index.cshtml
+++ b/PL/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<br />
+<div class="d-flex align-items-center justify-content-center" style="min-height: 65vh;">
+    <div class="text-center rounded-3 p-5">
+        <h1 class="display-4">Bienvenido a la Biblioteca AJ</h1>
+        <p>Descubre mundos entre páginas la biblioteca AJ es tu puerta a la imaginación.</p>
+    </div>
 </div>
