--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -5,60 +5,61 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PL</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <title>@ViewData["Title"] - AJ</title>
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Minty.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PL.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PL</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/Images/Logo.png" height="35" width="35"/></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="collapse navbar-collapse" id="navbarColor01">
                     @if (Rol.IsSignedIn(User))
                     {
                         if (User.IsInRole("Administrador"))
                         {
                             <ul class="navbar-nav flex-grow-1">
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Autor" asp-action="GetAll">Autores</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Autor" asp-action="GetAll">Autores</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Medio" asp-action="GetAll">Medios</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Medio" asp-action="GetAll">Medios</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Idioma" asp-action="GetAll">Idiomas</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Idioma" asp-action="GetAll">Idiomas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Editorial" asp-action="GetAll">Editorales</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Editorial" asp-action="GetAll">Editorales</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Rol" asp-action="GetAll">Roles</a>
-                                </li>
-                            </ul>
-                            <partial name="_LoginPartial" />
-                        }else
-                        {
-                            <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Medio" asp-action="GetAll">Medios</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Rol" asp-action="GetAll">Roles</a>
                                 </li>
                             </ul>
                             <partial name="_LoginPartial" />
                         }
-                        
-                    }else
+                        else
+                        {
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Medio" asp-action="GetAll">Medios</a>
+                                </li>
+                            </ul>
+                            <partial name="_LoginPartial" />
+                        }
+
+                    }
+                    else
                     {
 
                         <partial name="_LoginPartial" />
                     }
-                    
                 </div>
             </div>
         </nav>
